# amiga-types-check

./: .gitignore  Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  check.c
