#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([Check], [1.0.0], [https://submit.bug])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	src/Makefile
])	

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF([char])

AC_CHECK_SIZEOF([short])

AC_CHECK_SIZEOF([int])

AC_CHECK_SIZEOF([long])

AC_CHECK_SIZEOF([long long])

AC_CHECK_SIZEOF([void *])

# Checks for library functions.

AC_OUTPUT
